--- a/www/accessMod.css
+++ b/www/accessMod.css
@@ -56,10 +56,12 @@ height:30px;
   color:lightgray;
 }
 
+/*
 .htContainer {
   overflow :scroll;
 }
 
+*/
 
 
 .am-progress-bar {
@@ -84,3 +86,6 @@ height:30px;
 cursor:pointer;
 }
 
+#am-map-project {
+background-color:white;
+}
