hf table and added explaination about removing diagonal cell

--- a/www/accessMod.css
+++ b/www/accessMod.css
@@ -89,3 +89,13 @@ cursor:pointer;
 #am-map-project {
 background-color:white;
 }
+
+
+
+#hfTableModule2 {
+height:600px;
+width:600px;
+overflow:scroll;
+}
+
+
