--- a/www/accessMod.css
+++ b/www/accessMod.css
@@ -1,8 +1,14 @@
 button, .btn,.btn-danger,.btn-success, .btn-danger {
   /*width:200px;*/
   width:100%;
-  height:30px;
+ /* height:30px;*/
 }
+
+
+.btn-inline {
+  width:inherit;
+}
+
 
 /*
 button .btn {
@@ -90,11 +96,15 @@ cursor:pointer;
 background-color:white;
 }
 
+#zoneCoverageTable{
+height:300px;
+width:100%;
+overflow:scroll;
+}
 
-
-#hfTableModule2 {
-height:600px;
-width:600px;
+#hfTable {
+height:300px;
+width:100%;
 overflow:scroll;
 }
 
