--- a/www/accessMod.css
+++ b/www/accessMod.css
@@ -103,10 +103,26 @@ overflow:scroll;
 }
 
 #hfTable {
-height:300px;
+height:150px;
 width:100%;
 overflow:scroll;
 }
+
+#hfTableTo {
+height:150px;
+width:100%;
+overflow:scroll;
+}
+
+
+
+#hfTableRules {
+height:99%;
+width:99%;
+overflow:scroll;
+}
+
+
 
 #btnDataNew_progress {
 height:0px;
