add nearest dist/time from a facility set to another. Code cleaning. Optimisation using data.table for large referral set.

--- a/www/accessmod.css
+++ b/www/accessmod.css
@@ -66,6 +66,7 @@ height:30px;
 
   .am-square {
     /* padding-top:0px;*/
+    background-color:#F9F9F9;
     border-radius: 0px;
     /*border=1px;
     border-color:lightgray;*/
