--- a/www/accessmod.css
+++ b/www/accessmod.css
@@ -66,7 +66,8 @@ height:30px;
 
   .am-square {
     /* padding-top:0px;*/
-    background-color:#F9F9F9;
+    /*background-color:#F9F9F9;*/
+    background-color:#FFFFFF;
     border-radius: 0px;
     /*border=1px;
     border-color:lightgray;*/
@@ -122,17 +123,22 @@ overflow:scroll;
 }
 
 #hfTable {
-height:150px;
+height:250px;
 width:100%;
 overflow:scroll;
 }
 
 #hfTableTo {
-height:150px;
+height:250px;
 width:100%;
 overflow:scroll;
 }
 
+#dataListTable {
+height:400px;
+width:100%;
+overflow:scroll;
+}
 
 
 #hfTableRules {
