--- a/www/accessmod.css
+++ b/www/accessmod.css
@@ -153,12 +153,19 @@ overflow:scroll;
 height:0px;
 }
 
-
+/*duplicate from next sweet alert style definition ?*/
 .amSweetHelp {
    text-align: left;
 }
 
 
-.introjs-tooltipReferenceLayer {
-    z-index: 1000000;
-  }
+.sweet-alert p {
+  font-size: 16px;
+  text-align: left;
+  font-weight: 300;
+  position: relative;
+  float: ;
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
