--- a/www/accessmod.css
+++ b/www/accessmod.css
@@ -1,7 +1,7 @@
 button, .btn,.btn-danger,.btn-success, .btn-danger {
   /*width:200px;*/
   width:100%;
- /* height:30px;*/
+  /* height:30px;*/
 }
 
 .content-wrapper {
@@ -54,6 +54,12 @@ height:30px;
     filter: alpha(opacity=0);
   }
 
+  label.btn input[type="file"] {
+    position: fixed;
+    top: -1000px;
+  }
+
+
 
   .selectize-control {
     width:100%;
@@ -84,95 +90,95 @@ height:30px;
 
 /*
 .htContainer {
-  overflow :scroll;
+overflow :scroll;
 }
 
-*/
+ */
 
 
-.am-progress-bar {
-  padding: 5px 0px 5px 0px;
-  background: #333;
-  width: 90%;
-  border-radius: 25px;
-}
+  .am-progress-bar {
+    padding: 5px 0px 5px 0px;
+    background: #333;
+    width: 90%;
+    border-radius: 25px;
+  }
 
-.am-progress-container {
-  border: 1px solid #E3E3E3;
-  /*padding: 0px 0px; */
-  background: #F1F1F1;
-  width: 100%;
-  border-radius: 25px;
-}
-
-
-/* map css*/
-
-#amPreviewMap {
-cursor:pointer;
-}
-
-#am-map-project {
-background-color:white;
-}
-
-#zoneCoverageTable{
-height:300px;
-width:100%;
-overflow:scroll;
-}
-
-#hfTable {
-height:250px;
-width:100%;
-overflow:scroll;
-}
-
-#hfTableTo {
-height:250px;
-width:100%;
-overflow:scroll;
-}
-
-#dataListTable {
-height:400px;
-width:100%;
-overflow:scroll;
-}
-
-#logsTable {
-height:400px;
-width:100%;
-overflow:scroll;
-}
+  .am-progress-container {
+    border: 1px solid #E3E3E3;
+    /*padding: 0px 0px; */
+    background: #F1F1F1;
+    width: 100%;
+    border-radius: 25px;
+  }
 
 
+  /* map css*/
 
-#hfTableRules {
-height:99%;
-width:99%;
-overflow:scroll;
-}
+  #amPreviewMap {
+    cursor:pointer;
+  }
+
+  #am-map-project {
+    background-color:white;
+  }
+
+  #zoneCoverageTable{
+    height:300px;
+    width:100%;
+    overflow:scroll;
+  }
+
+  #hfTable {
+    height:250px;
+    width:100%;
+    overflow:scroll;
+  }
+
+  #hfTableTo {
+    height:250px;
+    width:100%;
+    overflow:scroll;
+  }
+
+  #dataListTable {
+    height:400px;
+    width:100%;
+    overflow:scroll;
+  }
+
+  #logsTable {
+    height:400px;
+    width:100%;
+    overflow:scroll;
+  }
 
 
 
-#btnDataNew_progress {
-height:0px;
-}
-
-/*duplicate from next sweet alert style definition ?*/
-.amSweetHelp {
-   text-align: left;
-}
+  #hfTableRules {
+    height:99%;
+    width:99%;
+    overflow:scroll;
+  }
 
 
-.sweet-alert p {
-  font-size: 16px;
-  text-align: left;
-  font-weight: 300;
-  position: relative;
-  float: ;
-  margin: 0;
-  padding: 0;
-  line-height: normal;
-}
+
+  #btnDataNew_progress {
+    height:0px;
+  }
+
+  /*duplicate from next sweet alert style definition ?*/
+  .amSweetHelp {
+    text-align: left;
+  }
+
+
+  .sweet-alert p {
+    font-size: 16px;
+    text-align: left;
+    font-weight: 300;
+    position: relative;
+    float: ;
+    margin: 0;
+    padding: 0;
+    line-height: normal;
+  }
