--- a/www/accessmod.css
+++ b/www/accessmod.css
@@ -31,21 +31,16 @@ label {
   margin-bottom: 1px;
   /*font-weight: 300;*/
 }
-/*
-button .btn {
-width:200px;
-height:30px;
+
+
+.shiny-input-container:not(.shiny-input-container-inline){
+  width : 100%;
 }
+
+
+/*
+http://jsfiddle.net/32f5R/
  */
-
-  .shiny-input-container:not(.shiny-input-container-inline){
-    width : 100%;
-  }
-
-
-  /*
-  http://jsfiddle.net/32f5R/
-   */
   .btn-browse {
     position: relative;
     overflow: hidden;
@@ -69,9 +64,9 @@ height:30px;
     top: -1000px;
   }
 
- .btn-txt-left {
-text-align: left;
- }
+  .btn-txt-left {
+    text-align: left;
+  }
 
 
   .selectize-control {
@@ -102,13 +97,13 @@ text-align: left;
 }
 
 .amRowTable {
- margin-left:30px;
- margin-right:0px;
- margin-top:30px;
+  margin-left:30px;
+  margin-right:0px;
+  margin-top:30px;
 }
 
 .amTableMargin {
- margin-left:20px;
+  margin-left:20px;
 }
 
 #proj-name {
@@ -120,117 +115,124 @@ text-align: left;
 }
 
 
-/*
-.htContainer {
-overflow :scroll;
+
+
+.am-progress-bar {
+  padding: 5px 0px 5px 0px;
+  background: #333;
+  width: 90%;
+  border-radius: 25px;
 }
 
- */
-
-
-  .am-progress-bar {
-    padding: 5px 0px 5px 0px;
-    background: #333;
-    width: 90%;
-    border-radius: 25px;
-  }
-
-  .am-progress-container {
-    border: 1px solid #E3E3E3;
-    /*padding: 0px 0px; */
-    background: #F1F1F1;
-    width: 100%;
-    border-radius: 25px;
-  }
-
-
-  /* map css*/
-
-  #amPreviewMap {
-    cursor:pointer;
-  }
-
-  #am-map-project {
-    background-color:white;
-  }
-
-/*  #zoneCoverageTable{
-    height:300px;
-    width:100%;
-    overflow:scroll;
-  }
-
-  #hfTable {
-    height:250px;
-    width:100%;
-    overflow:scroll;
-  }
-
-  #hfTableTo {
-    height:250px;
-    width:100%;
-    overflow:scroll;
-  }
-
- 
-
-  #logsTable {
-    height:400px;
-    width:100%;
-    overflow:scroll;
-  }
-
-
-
-  #hfTableRules {
-    height:99%;
-    width:99%;
-    overflow:scroll;
-  }
-
-  */
-
- 
-/*
-#capacityTable{
-  height:100%;
-  width:200px;
-  overflow:scroll;
+.am-progress-container {
+  border: 1px solid #E3E3E3;
+  /*padding: 0px 0px; */
+  background: #F1F1F1;
+  width: 100%;
+  border-radius: 25px;
 }
-*/
-
-  /*
-  .tableContainerShort {
-    height:200px;
-    width:100%;
-    overflow:scroll;
-  }
-
-  */
-
-/* 
-  #btnDataNew_progress {
-    height:0px;
-  }
-*/
-
-  
-  /*duplicate from next sweet alert style definition ?*/
-  .amSweetHelp {
-    text-align: left;
-  }
 
 
-  .sweet-alert p {
-    font-size: 16px;
-    text-align: left;
-    font-weight: 300;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    line-height: normal;
-  }
-  
-  .sweet-overlay {
+/* map css*/
+
+#amPreviewMap {
+  cursor:pointer;
+}
+
+#am-map-project {
+  background-color:white;
+}
+
+
+/*duplicate from next sweet alert style definition ?*/
+.amSweetHelp {
+  text-align: left;
+}
+
+
+.sweet-alert p {
+  font-size: 16px;
+  text-align: left;
+  font-weight: 300;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  line-height: normal;
+}
+
+.sweet-overlay {
   z-index:1400;
 }
+
+
+/* AccessMod modal panel*/
+
+.panel-modal {
+  z-index:9998;
+}
+
+
+.panel-modal-background {
+  opacity:0.3; 
+  background: #000; 
+  width:100%;
+  height:100%; 
+  z-index:9999;
+  top:0; 
+  left: 0; 
+  position:fixed;
+}
+
+
+
+.panel-modal-title {
+  margin: 30px;
+  text-align : center;
+  font-size : x-large;
+}
+
+.panel-modal-subtitle {
+  margin: 30px;
+  text-align : center;
+  font-size : small;
+
+}
+
+.panel-modal-content {
+  -webkit-box-shadow: -2px 2px 38px -6px rgba(0,0,0,0.75);
+  -moz-box-shadow: -2px 2px 38px -6px rgba(0,0,0,0.75);
+  box-shadow: -2px 2px 38px -6px rgba(0,0,0,0.75);
+  width:500px;
+  z-index:10000;
+  top:20%; 
+  left:30%; 
+  position:fixed;
+  background-color: white;
+  color:#000;
+  padding: 20px 20px 20px 20px;
+  cursor: move;
+  opacity: 1;
+} 
+
+
+.panel-modal-buttons {
+  margin-top:20px; 
+  text-align:center;
+  color:#000;
+}
+
+.panel-modal-text {
+  height:60%;
+  overflow-y:auto;
+  margin:20px;
+  width:90%;
+
+}
+
+.panel-overall {
+  z-index : 100000
+}
+
+
+
+
