add conditional panel according to noData input; added tabbed interface to merge land cover

--- a/www/css/accessmod.css
+++ b/www/css/accessmod.css
@@ -116,6 +116,11 @@ label.btn input[type="file"] {
   margin-top:30px;
 }
 
+
+.am-tab-content {
+  margin-top:30px;
+}
+
 .amTableMargin {
   margin-left:20px;
 }
