--- a/www/progress/progress.css
+++ b/www/progress/progress.css
@@ -10,10 +10,13 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: rgba(232, 232, 232, 0.8);
   z-index : 1001;
+  background-color: rgba(0,0,0,0.6);
 }
 
+.shiny-busy .pbar-panel {
+  background: none;
+}
 
 .pbar-title {
 font-size : 18px;
@@ -52,7 +55,7 @@ vertical-align:sub;
 
 .pbar-bar-container {
    width: 100%;
-    border: 1px solid #000;
+    border: 1px solid #0F0;
     height: 7px;
     margin-bottom: 15px;
 }
@@ -60,7 +63,7 @@ vertical-align:sub;
 .pbar-bar {
 width:0;
 height:100%;
-background-color : #000;
+background-color : #0F0;
 transition: width 1s;
 -webkit-transition: width 1s; /* Safari */
 transition-timing-function: linear;
@@ -69,7 +72,8 @@ transition-timing-function: linear;
 
 
 .pbar-text {
-text-size:14px;
+text-size:18px;
+color : #0F0;
 }
 
 
@@ -82,6 +86,7 @@ height:20%;
 
 .pbar-title {
 text-size:18px;
+color: #0f0;
 }
 
 .pbar-options-container{
