--- a/www/css/accessmod.css
+++ b/www/css/accessmod.css
@@ -329,21 +329,22 @@ label.btn input[type="file"] {
 }
 
 .shiny-busy-panel {
-  top: 0px;
-  width: 100%;
-  right: 0px;
-  height : 100%;
   position: fixed;
+  background-color: #FFF;
+
   z-index: -1;
-  visibility: hidden;
-  background-color: #000;
   opacity :0;
+  width:1px;
+  height:1px;
+  top:-10000px;
+  right:-10000px;
+
   -webkit-transition-property: opacity; /* Safari */
-  -webkit-transition-duration: 1s; /* Safari */
-  -webkit-transition-delay: 1s; /* Safari */
+  -webkit-transition-duration: 2s; /* Safari */
+  -webkit-transition-delay: 2s; /* Safari */
   transition-property: opacity;
-  transition-duration: 1s;
-  transition-delay: 1s;
+  transition-duration: 2s;
+  transition-delay: 2s;
 }
 
 .shiny-busy-panel-content{
@@ -356,13 +357,16 @@ label.btn input[type="file"] {
 
 .shiny-busy-panel p {
   font-size: 22px;
-  color: #FFF;
+  color: #000;
 }
 
 .shiny-busy .shiny-busy-panel{
   z-index: 9000;
-  visibility: visible;
   opacity : 0.6;
+  top: 0px;
+  right: 0px;
+  width: 100%;
+  height : 100%;
 }
 
 .loading-screen ~ .shiny-busy-panel {
