--- a/www/css/accessmod.css
+++ b/www/css/accessmod.css
@@ -206,8 +206,8 @@ label.btn input[type="file"] {
 
 
 .panel-modal-background {
-  opacity:0.3; 
-  background: #000; 
+  opacity:0.9; 
+  background: #FFF; 
   width:100%;
   height:100%; 
   z-index:9999;
