--- a/www/css/accessmod.css
+++ b/www/css/accessmod.css
@@ -332,20 +332,21 @@ label.btn input[type="file"] {
 .shiny-busy-panel {
   position: fixed;
   background-color: #FFF;
-
-  z-index: -1;
+  z-index: 9000;
+  /*z-index: -1;*/
   opacity :0;
-  width:1px;
-  height:1px;
-  top:-10000px;
-  right:-10000px;
+  width:100%;
+  height:100%;
+  top:0;
+  left:0;
 
   -webkit-transition-property: opacity; /* Safari */
-  -webkit-transition-duration: 2s; /* Safari */
+  -webkit-transition-duration: 1s; /* Safari */
   -webkit-transition-delay: 2s; /* Safari */
   transition-property: opacity;
-  transition-duration: 2s;
+  transition-duration: 1s;
   transition-delay: 2s;
+  pointer-events:none;
 }
 
 .shiny-busy-panel-content{
@@ -362,16 +363,15 @@ label.btn input[type="file"] {
 }
 
 .shiny-busy .shiny-busy-panel{
-  z-index: 9000;
+  /*z-index: 9000;*/
   opacity : 0.9;
-  top: 0px;
-  right: 0px;
-  width: 100%;
-  height : 100%;
+  pointer-events:auto;
 }
 
 .loading-screen ~ .shiny-busy-panel {
-  display: none;
+  opacity : 0;
+  pointer-events:none;
+  /*display: none;*/
 }
 
 
