--- a/www/css/geom.css
+++ b/www/css/geom.css
@@ -9,15 +9,22 @@
     font-weight: normal;
     font-style: normal;
 }
-[class*='icon-']:after{
-  float:right;
-  display: inline-block;
+[class*='icon-']:after,
+[class*='icon-']:before {
    font-family: 'geom';
+  display: inline-block;
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale
+}
+
+[class*='icon-']:after{
+  float : right
+}
+[class*='icon-']:before{
+  float : left
 }
 .icon-grid_full:after{content:'\0041';}
 .icon-grid_area:after{content:'\0042';}
@@ -26,3 +33,10 @@
 .icon-vect_poly:after{content:'\0045';}
 .icon-vect_line:after{content:'\0046';}
 .icon-vect_point:after{content:'\0047';}
+.icon-grid_full_before:before{content:'\0041';}
+.icon-grid_area_before:before{content:'\0042';}
+.icon-grid_line_before:before{content:'\0043';}
+.icon-grid_point_before:before{content:'\0044';}
+.icon-vect_poly_before:before{content:'\0045';}
+.icon-vect_line_before:before{content:'\0046';}
+.icon-vect_point_before:before{content:'\0047';}
