--- a/www/css/accessmod.css
+++ b/www/css/accessmod.css
@@ -51,6 +51,10 @@ button,
 }
 .text-danger {
 }
+.skin-black .callout.callout-info {
+  background-color: #3c8dbc!important;
+}
+
 
 .btn-inline {
   width: inherit;
