--- a/www/css/accessmod.css
+++ b/www/css/accessmod.css
@@ -539,3 +539,18 @@ label.btn input[type='file'] {
   image-rendering: pixelated;
 }
 
+/**
+* Placeholder
+*/
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  opacity: 0.5;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  opacity: 0.5;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  opacity: 0.5;
+}
+:-moz-placeholder { /* Firefox 18- */
+  opacity: 0.5;
+}
