--- a/www/modules/progress/style.css
+++ b/www/modules/progress/style.css
@@ -33,7 +33,9 @@
   width: 100%;
   height: 100vh;
   z-index: 1001;
-  background-color: rgba(0, 0, 0, 0.6);
+  background: rgba(255,255,255,0.1);
+  backdrop-filter: blur(1px);
+  -webkit-backdrop-filter: blur(1px);
 }
 
 .shiny-busy .pbar-panel {
